fix overflow

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -28,15 +28,7 @@ section {
 //  background-color: white;
 //}
 
-.wrapper {
-  display: grid;
-  grid-gap: 10px;
-  grid-template-columns: [col] 200px [col] 1fr  ;
-  grid-template-rows: [row] auto [row] 1fr;
-  background-color: #fff;
-  color: #444;
-  height: 100vh;
-}
+
 .logo{
   grid-row: row 1 ;
   grid-column: col 1;
@@ -54,17 +46,31 @@ section {
   height: 40px;
   text-align: center;
 }
+
+body { margin: 0; }
+
+.wrapper {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: [col] 200px [col] 1fr  ;
+  grid-template-rows: [row] auto [row] 1fr;
+  background-color: #fff;
+  color: #444;
+  height: 100vh;
+  padding-bottom: 25px;
+}
+
 .content{
   grid-column: 2;
-  grid-row: row 2 ;
+  grid-row: row 2;
   overflow: auto;
 
 }
-.accordion{;
+.myaccordion{;
   grid-row: row 2 ;
   grid-column: 1;
   background-color:  #da516e;;
-  height: 100%;
+  overflow: auto;
 }
 
 ////FOR Navigation Drawer
